# pybabynames

./: .gitignore  CHANGELOG  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements-dev.txt
.github/workflows/: publish.yml  test.yml
data/: applicants.csv  lifetables.csv
data-raw/: convert.R
pybabynames/: __init__.py
pybabynames/data/: applicants.parquet  births.csv  births.parquet  lifetables.parquet
tests/: test_pybabynames.py
